# sar_opr_predictor

./: README.md  models.json  pyproject.toml
models/: s1c-iw_opr_w1_normalization-g20260624.npy  s1c-iw_opr_w2_normalization-g20260624.npy  s1c-iw_opr_w3_normalization-g20260624.npy  s1c-iw_opr_w4_normalization-g20260624.npy
src/s1tools/opr_predictor/: opr_inference.py
test/: test_opr_inference.py  test_opr_mask_consistency.py  test_opr_pipeline_proof.py
test/ressources/opr/: 20230413T063223_patch.npz
